# agent

./: .gitignore  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  MANIFEST.in  README.md  _bootstrap.py  agent.py  agent_embedded.py  agent_knowledge.txt  agent_tui.py  foreach_line.py  fork_parse.py  local_knowledge.txt  pyproject.toml  telegram_channel_ai.py
agentlib/: __init__.py  __main__.py  agent_json.py  app.py  cli.py  clipboard_io.py  coercion.py  debug_llm_log.py  deliverables.py  embedding.py  prefs.py  prompt_templates_io.py  prompts.py  repl_extensions.py  routing.py  routing_followups.py  session.py  settings.py  sink.py  transcript_shape.py  tui_busy.py  tui_parse.py  tui_widgets.py
docs/: code-extension.md  core-tools.md  environment.md  extension-settings.md  help-repl.md  index.md  mcp.md  native-tools-phase1-rollback.md  plugin-toolsets.md  queue.md  recommended-local-models.md  repl-extensions.md  repl-session.md  session-command.md  settings-repl.md  while-repl.md
extensions/: code.py  queue_control.py
prompt_templates/: __init__.py  brainstorm.json  code_review.json  coding.json  concise.json  data_analysis.json  debugging.json  devops.json  performance.json  product.json  refactor.json  research.json  security_audit.json  strict_json.json  teaching.json  write.json
skills/: __init__.py  api_openapi.json  apple_ios.json  c_cpp.json  docker.json  documentation.json  git.json  grounded_cli.json  python.json  python_packaging.json  python_testing.json  research.json  rust.json  shell_scripting.json  sql_databases.json  teacher.json
subtest/: repo_dependency_analyzer.py  test_mock_repo.py
tests/: __init__.py  conftest.py  harness.py  test_agent.py  test_agent_json_extract.py  test_agent_prompt_messages.py  test_applescript_tools.py  test_bootstrap.py  test_call_python.py  test_cd_repl.py  test_cli_debug_log.py  test_cli_parse_verbose.py  test_clipboard_io.py  (+50 more)
(+63 files in other folders)
