[project]
name = "ollama-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "ollama_quality: live Ollama API; set RUN_OLLAMA_QUALITY=1 and have models installed",
]
