[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
description = "Local-first CLI agent for Ollama (and optional hosted OpenAI-compatible backends)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
    "readability-lxml>=0.8.1",
]

[project.scripts]
agent = "agent:main"

[project.optional-dependencies]
tui = [
    "textual>=0.83.0",
]
browser = [
    "playwright>=1.49.0",
]

[tool.setuptools]
py-modules = ["agent"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "skills*", "prompt_templates*"]
exclude = ["tests*", "subtest*"]

[tool.setuptools.package-data]
"skills" = ["*.json", "references/*.md"]
"prompt_templates" = ["*.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "ollama_quality: live Ollama API; set RUN_OLLAMA_QUALITY=1 and have models installed",
]
